styles/index.css
/* ... */
.button span {
    height: 3px;
    width: 100%;
    background: white;
    display: inline-block;
    transition: all 0.5s cubic-bezier(.62, .43, .35, 1.47);
}


/* toggle icon animation */
#check:checked~.button span:nth-child(1) {
    width: 100%;
    transform: rotate(45deg) translateY(6px) translateX(6px);
}

#check:checked~.button span:nth-child(2) {
    width: 0;
}

#check:checked~.button span:nth-child(3) {
    width: 100%;
    transform: rotate(-45deg) translateY(-7px) translateX(7px);
}

/* the nav height will be set to the height in pixels that would have for default, using height:auto won't work but you can put that value in pixels creating the slide*/
#check:checked~nav {
    height: 144px;
}

#check:checked~nav a {
    padding: 10px;
    opacity: 1;
    transform: scale(1);
}

img {
    width: 100%;
    height: auto;
}

.swiper .swiper-button-prev,
.swiper .swiper-button-next {
    color: rgba(255, 255, 255, 0.69);
}

.swiper .swiper-pagination-bullet-active {
    background-color: white;
}

#cursor {
    font-weight: 300;
    animation: blink 1s linear infinite;
}

@keyframes blink {
    0% {
        opacity: 100%;
    }

    50% {
        opacity: 0%;
    }
}


.arrow {
    z-index: 2;
    text-align: center;
    margin: 0;
}

.arrow a {
    text-decoration: none;
    color: rgba(0, 0, 0, 0.3);
}

.bounce {
    -moz-animation: bounce 2s infinite;
    -webkit-animation: bounce 2s infinite;
    animation: bounce 2s infinite;
}

@keyframes bounce {

    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);
    }

    40% {
        transform: translateY(-30px);
    }

    60% {
        transform: translateY(-15px);
    }
}





.about {
    background-color: white;
    /* background-image: url(/media/bg-about.webp); */
    margin: 0;
    min-width: 100%;
    line-height: 180%;
    padding-bottom: 2% !important;
    margin-bottom: 0 !important;
}

.about h1 {
    line-height: 130%;
    font-weight: 600;
    color: #4748EE;
}

.head-welcome {
    font-size: 1.5rem;
    font-weight: 600;
    color: #ff5100;
}

.head-type {
    font-size: 5.7rem;
}


.demo {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    color: black;
    text-align: center;
    background-color: #FFC436;
    padding: 5%;
    padding-top: 1%;
    padding-bottom: 2%;
    margin-left: 0;
    margin-right: 0;
    min-width: 100%;
    font-size: 1.5rem;
    box-shadow: 0 4px 8px rgb(0, 0, 0)
}

.demo-item {
    text-align: left;
    gap: 100px;
}

.demo h2 {
    font-size: 2.5rem;
    font-weight: 600;
}

.demo p {
    font-size: 1rem;
    font-weight: 300;
    margin-bottom: 2%;
}

.demo button {
    background-color: black;
    color: white;
    padding: 2%;
    border: none;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s, transform 0.3s;
}

.demo button:hover {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.848);
    transform: scale(1.02);
}


.courses {
    color: white;
    text-align: center;
    background-color: #002147bb;
    padding: 5%;
    padding-top: 1%;
    padding-bottom: 2%;
    margin-left: 0;
    margin-right: 0;
    min-width: 100%;
}

.card {
    width: 90%;
    min-height: 160px;
    padding: 2%;
    margin: 5% auto 10%;
    padding-bottom: 0;
}

.card-img-top {
    width: 100%;
}

.card-body h5 {
    padding: 1%;
    font-size: 1.2rem;
    font-weight: 500;
}

.card .btn {
    border-radius: 0px;
    padding: 1% 4%;
    width: 100%;
    background-color: #4748EE;
}

.syllabus {
    background-color: white;
    margin: 0;
    padding: 7%;
    min-width: 100%;
    padding-bottom: 5% !important;
}

.syllabus h2 {
    padding-left: 0;
    color: black;
}

.syllabus p {
    padding-left: 0;
}

.syllabus .row {
    margin-top: 5%;
}

.syllabus-link {
    margin: 0 auto;
    border-radius: 20px;
    padding: 0.5% 2%;
    font-weight: 300;
    background-color: #4748EE;
    max-width: fit-content;
    text-decoration: none;
    font-size: 1.2rem;
    cursor: pointer;
}

.syllabus-link:hover {
    color: black;
}

table {
    font-size: 0.9rem;
}

table,
td {
    border: 0.2px solid black;
    border-collapse: collapse;
    text-align: center;
    padding: 0.5% 0.5%;
}

th {
    color: white;
    background-color: #4748EE;
    border: 0.2px solid rgb(255, 255, 255);
    font-weight: 500;
}

.guidance {
    color: white;
    text-align: center;
    background-color: #001a38d1;
    padding: 5%;
    padding-top: 1%;
    padding-bottom: 4%;
    margin-left: 0;
    margin-right: 0;
    min-width: 100%;
}

.guide-text {
    text-align: left;
    padding: 5%;
    padding-top: 2%;
    line-height: 200%;
}

.guide-text h4 {
    font-weight: 500;
}

.guide-text p {
    font-weight: 300;
}

.whatsapp-chat {
    margin-top: 5%;
    display: flex;
    flex-direction: row;
    padding: 2% 5%;
    /* justify-content: center; */
    align-items: center;
    max-height: fit-content;
    background: rgba(255, 255, 255, 0.181);
    color: white;
    margin-bottom: 5%;
}

.whatsapp-chat p {
    margin: 0;
}

.form-box {
    min-width: fit-content;
    border: solid 1px white;
    border-radius: 20px;
}

.form-div {
    margin: 0 auto;
    width: 50%;
}

input {
    color: white;
    background-color: rgba(0, 0, 0, 0.243);
}

.form-label {
    margin-bottom: 0;
}

.form-control {
    text-align: center;
    border: none;
    border-radius: 0;
    border-bottom: solid 1px white;
    color: white;
    background-color: rgba(0, 0, 0, 0);
}


.form-control:focus {
    color: white;
    background-color: rgba(0, 0, 0, 0.612);
}

.form-field {
    text-align: left;
}

.form-div input {
    color: white;
    background-color: rgba(0, 0, 0, 0);
    margin: 0 auto;
}

.form-div textarea {
    color: white;
    background-color: rgba(0, 0, 0, 0);
    margin: 0 auto;
    border: solid 1px white;
    text-align: left;
}

.call-a {
    text-decoration: none;

    color: #4748EE;
}


.call-now h1 {
    color: #002147;
}
/* ... */

